bk_ida/gccida/c3/dwarf2out_frame_debug_expr
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1754:4: error: expected ';' after expression
rtx v12; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1754:5: error: use of undeclared identifier 'v12'; did you mean 'v10'?
rtx v12; // r15 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1752:5: note: 'v10' declared here
int v10; // eax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1798:1: error: use of undeclared identifier 'v12'
v12 = ( rtx)expr[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1802:17: error: use of undeclared identifier 'v12'
if ( *( _WORD *)v12 != 61 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1804:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v16.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1815:6: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
if ( cfa_temp_0 != v36 ) 
     ^~~~~~~~~~
     cfa_temp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1815:17: error: invalid operands to binary expression ('dw_cfa_location' (aka 'struct cfa_loc') and 'long long')
if ( cfa_temp_0 != v36 ) 
     ~~~~~~~~~~ ^  ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1836:6: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
if ( cfa_temp_0 != v21 ) 
     ^~~~~~~~~~
     cfa_temp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1836:17: error: invalid operands to binary expression ('dw_cfa_location' (aka 'struct cfa_loc') and 'long long')
if ( cfa_temp_0 != v21 ) 
     ~~~~~~~~~~ ^  ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1842:8: error: use of undeclared identifier 'v12'
if ( ( v12->fld[0].rtint & 0xFFFFFFFE) == 6 || cfa.reg != v12->fld[0].rtint ) 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1842:59: error: use of undeclared identifier 'v12'
if ( ( v12->fld[0].rtint & 0xFFFFFFFE) == 6 || cfa.reg != v12->fld[0].rtint ) 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1865:1: error: use of undeclared identifier 'v12'
v12 = global_rtl[2]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1869:12: error: use of undeclared identifier 'v12'
v48->reg = v12; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1888:6: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
if ( cfa_temp_0 != *( _DWORD *)( *( _QWORD *)( v16.rtwint + 8) + 8LL) ) 
     ^~~~~~~~~~
     cfa_temp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1888:17: error: invalid operands to binary expression ('dw_cfa_location' (aka 'struct cfa_loc') and 'uint32' (aka 'unsigned int'))
if ( cfa_temp_0 != *( _DWORD *)( *( _QWORD *)( v16.rtwint + 8) + 8LL) ) 
     ~~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1914:38: error: use of undeclared identifier 'v12'
v14 = ( unsigned __int16)*( _DWORD *)v12; 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1915:41: error: use of undeclared identifier 'v12'
switch ( ( unsigned __int16)*( _DWORD *)v12 ) 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1918:1: error: use of undeclared identifier 'cfa_temp_0'; did you mean 'cfa_temp'?
cfa_temp_0 = rtx->fld[0].rtuint; 
^~~~~~~~~~
cfa_temp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1127:24: note: 'cfa_temp' declared here
static dw_cfa_location cfa_temp;
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/dwarf2out.c:1918:12: error: assigning to 'dw_cfa_location' (aka 'struct cfa_loc') from incompatible type 'unsigned int'
cfa_temp_0 = rtx->fld[0].rtuint; 
           ^ ~~~~~~~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_frame_debug_expr/src/obj/dwarf2out.o] Error 1
